--- a/index.html
+++ b/index.html
@@ -1,19 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web development portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
-<body>
-    <header>
 
+<body class="open-sans-normal">
+    <header class="header">
+        <nav>
+            <h3 class="nav-title">BDM Sa<span class="text-primary">lm</span>an</h3>
+            <ul>
+                <li><a class="golden-flow" href="">Portfolio</a></li>
+                <li><a class="golden-flow" href="">Blog</a></li>
+                <li><a href=""><button class="btn-primary"> Contact me </button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-containt">
+<h4 class="banner-greetings golden-flow">Hi I am </h4>
+<h1 class="banner-title">BDM Salman</h1>
+<p class="banner-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and 
+slick websites that provide real value to the end user. Thousands of clients have procured 
+exceptional resulfs while working with me. Delivering work within time and budget which meets</p>
+<button class="btn-primary">Download CV</button>
+<button class="btn-primary">Contact</button>
+            </div>
+            <img class="banner-profile-pic" src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
