--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-background">
         <nav>
             <h3 class="nav-title">BDM Sa<span class="text-primary">lm</span>an</h3>
             <ul>
@@ -37,10 +37,126 @@ exceptional resulfs while working with me. Delivering work within time and budge
         </div>
     </header>
     <main>
+<section class="about">
+    <h3 class="section-title">About me</h3>
+    <p class="section-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis sunt repudiandae, provident necessitatibus, alias non a minus quidem ab delectus nesciunt nam voluptates qui quam, laborum similique iusto eaque expedita!</p>
 
-    </main>
-    <footer>
+    <div class="about-items">
+       <div class="about-item">
+        <p class="item-title">name</p>
+        <p class="item-description">BDM Salman</p>
+       </div>
+       <div class="about-item">
+        <p class="item-title">Email</p>
+        <p class="item-description">abcd@com</p>
+       </div>
+       <div class="about-item">
+        <p class="item-title">date of birth</p>
+        <p class="item-description">dec 19,1923</p>
+       </div>
+       <div class="about-item">
+        <p class="item-title">From</p>
+        <p class="item-description">dhaka</p>
+       </div>
+        <p class="item-description"></p>
+    </div>
 
+</section>
+
+<section class="skills">
+    <h3 class="section-titile text-center">what i do</h3>
+<p class="section-description text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa pariatur rerum, facere aut repudiandae ex deleniti assumenda fugit rem voluptate soluta deserunt exercitationem ipsum possimus nam nostrum? Voluptate, iusto amet.</p>
+
+
+<div class="skills-container">
+<div class="skill">
+    <img src="images/icons/js.png" alt="">
+    <h4 class="skill-title">javascript</h4>
+    <p class="skill-description">list skill/technologies here.</p>
+</div>
+<div class="skill">
+    <img src="images/icons/react.png" alt="">
+    <h4 class="skill-title">React</h4>
+    <p class="skill-description">react is very important</p>
+</div>
+<div class="skill">
+    <img src="images/icons/nodejs.png" alt="">
+    <h4 class="skill-title">NOte js</h4>
+    <p class="skill-description">note js is very wimportanet</p>
+</div>
+<div class="skill">
+    <img src="images/icons/mongo.png" alt="">
+    <h4 class="skill-title">MONGO db</h4>
+    <p class="skill-description">MONGO dd is so much neceaary </p>
+</div>
+
+</div>
+</section>
+<section class="resume">
+<h3 class="section-title">a summary of my resume</h3>
+<div class="resume-container">
+    <div class="resume-colum">
+        <h3 class="resume-column-title"></h3>
+        <div class="experience">
+            <h4 class="experience-title">master in computer engener</h4>
+            <h5 class="experience-sub-title">national unyverci8ty</h5>
+            <div class="experience-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur in dignissimos rerum ea es!</div>
+        </div>
+        <hr>
+        <div class="experience">
+            <h4 class="experience-title">hobby </h4>
+            <h5 class="experience-sub-title">4 yeasts </h5>
+            <div class="experience-description">execilyng </div>
+        </div>
+        <hr>
+       <hr>
+        <div class="experience">
+            <h4 class="experience-title">computer sfcine </h4>
+            <h5 class="experience-sub-title">pro in proggraming</h5>
+            <div class="experience-description">no qualitfie under allow </div>
+        </div>
+        <hr>
+         <hr>
+        <div class="experience">
+            <h4 class="experience-title">hobby </h4>
+            <h5 class="experience-sub-title">4 yeasts </h5>
+            <div class="experience-description">execilyng </div>
+        </div>
+        <hr>
+       <hr>
+        <div class="experience">
+            <h4 class="experience-title">computer sfcine </h4>
+            <h5 class="experience-sub-title">pro in proggraming</h5>
+            <div class="experience-description">no qualitfie under allow </div>
+        </div>
+        <hr><div class="text-center"><button class="btn-primary text-center">download cv</button>
+
+        </div>
+      
+</section>
+
+
+</main>
+
+    <footer class=".secondary-background">
+<div class="footer-column">
+    <h3 class="section-title">lets connect</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+</div>
+<div>
+    <a href=""><img src="images/icons/facebook.png" alt=""></a>
+    <a href=""><img src="images/icons/twitter.png" alt=""></a>
+    <a href=""><img src="images/icons/insta.png" alt=""></a>
+</div>
+<div class="footer-column">
+    <h3 class="section-title">lets inbox</h3>
+    <form action="">
+        <input type="text" name="" id="" placeholder="your name">
+        <input type="text" name="" id="" placeholder="your emial">
+        <textarea name="" id="" cols="30" rows="10" placeholder="massage"></textarea>
+        <input class="btn-primary" type="submit" value="Submit">
+    </form>
+</div>
     </footer>
 </body>
 
